--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -4,14 +4,14 @@ description: "Provides basic setup for container image building"
 inputs:
   acr_server_host:
     description: "Host name of ECR used for the repository"
-    default: 1932
+    default: 1932.amazon.com
     required: false
 runs:
   using: "composite"
   steps:
     - shell: bash
       env:
-        ACR_SERVER_HOST: ${{ inputs.acr_server_host }}
+        ACR_SERVER_HOST: ${{ inputs.ecr_server_host }}
       run: |
         ./img-build-tools-library/.github/actions/setup/environment.py > /tmp/env
         cat /tmp/env
