fix: ecr_host_name

--- a/.github/actions/aws_auth/action.yml
+++ b/.github/actions/aws_auth/action.yml
@@ -1,25 +1,46 @@
 ---
 name: "AWS authentication"
 description: "Authentication to AWS"
+inputs:
+  aws_account_id:
+    description: AWS account ID
+    required: true
+  aws_profile:
+    description: AWS profile to use
+    required: false
+    default: z-engineering-dev-cicd
+  aws_region:
+    description: AWS region to use
+    required: false
+    default: eu-central-1
+  home_aws_config:
+    description: AWS config file content with profile details
+    required: true
+  home_aws_credentials:
+    description: AWS credentials file
+    required: true
 runs:
   using: "composite"
   steps:
     - id: aws_auth
       shell: bash
       env:
-        AWS_ACCOUNT_ID: "${{ secrets.AWS_ACCOUNT_ID_ENGINEERING_DEV }}"
-        AWS_PROFILE: z-engineering-dev-cicd
-        AWS_REGION: eu-central-1
+        AWS_ACCOUNT_ID: ${{ inputs.aws_account_id }}
+        AWS_PROFILE: ${{ inputs.aws_profile }}
+        AWS_REGION: ${{ inputs.aws_region }}
+        HOME_AWS_CONFIG: ${{ inputs.home_aws_config }}
+        HOME_AWS_CREDENTIALS: ${{ inputs.home_aws_credentials }}
       run: |
         mkdir -p $HOME/.aws
-        echo "${{ secrets.HOME_AWS_CONFIG }}" > $HOME/.aws/config
-        echo "${{ secrets.HOME_AWS_CONFIG }}" > $HOME/.aws/credentials
+        echo "$HOME_AWS_CONFIG" > $HOME/.aws/config
+        echo "$HOME_AWS_CREDENTIALS" > $HOME/.aws/credentials
         aws sts assume-role \
           --role-arn arn:aws:iam::${AWS_ACCOUNT_ID}:role/MetricsGlobalCICD \
           --profile ${AWS_PROFILE} \
           --role-session-name=zilliqa \
-          --query 'join(``, [`export `, `AWS_ACCESS_KEY_ID=`, \
-          Credentials.AccessKeyId, ` ; export `, `AWS_SECRET_ACCESS_KEY=`, \
-          Credentials.SecretAccessKey, `; export `, `AWS_SESSION_TOKEN=`, \
-          Credentials.SessionToken])' \
-          --output text > .env
+          --query 'join(``, [
+            `AWS_ACCESS_KEY_ID=`, Credentials.AccessKeyId, `\n`,
+            `AWS_SECRET_ACCESS_KEY=`, Credentials.SecretAccessKey, `\n`,
+            `AWS_SESSION_TOKEN=`, Credentials.SessionToken
+          ])' \
+          --output text >> $GITHUB_ENV
